Bug 488090 - kleopatra-24.05.0 crash on wayland
Summary: kleopatra-24.05.0 crash on wayland
Status: RESOLVED FIXED
Alias: None
Product: kleopatra
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Other Linux
: NOR crash
Target Milestone: ---
Assignee: Andre Heinecke
URL:
Keywords:
: 493927 494710 (view as bug list)
Depends on:
Blocks:
 
Reported: 2024-06-05 19:30 UTC by onigino
Modified: 2024-10-31 18:13 UTC (History)
6 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description onigino 2024-06-05 19:30:25 UTC
https://invent.kde.org/pim/kleopatra/-/issues/5
https://bugs.gentoo.org/933441

All other KDE apps work without issue

Not sure whats missing here, please let me know what you need

Works fine on 24.02.2

```
QT_LOGGING_RULES="org.kde.pim.kleopatra.debug=true" kleopatra
org.kde.pim.kleopatra: Startup timing: 33 ms: Application created
org.kde.pim.kleopatra: Startup timing: 34 ms: Service created
org.kde.pim.kleopatra: Application created
org.kde.pim.kleopatra: Startup timing: 63 ms: GPGME Initialized
org.kde.pim.kleopatra: Startup timing: 80 ms: Starting version info check
org.kde.pim.kleopatra: Startup timing: 80 ms: Version info checked
org.kde.pim.kleopatra: Startup timing: 80 ms: Checking backend versions
org.kde.pim.kleopatra: Startup timing: 94 ms: backend versions checked
org.kde.pim.kleopatra: ReaderStatus::Private: Using new DeviceInfoWatcher
org.kde.pim.kleopatra: Startup timing: 116 ms: Application initialized
org.kde.pim.kleopatra: Startup timing: 118 ms: UiServer created
org.kde.pim.kleopatra: Startup timing: 118 ms: UiServer started
org.kde.pim.kleopatra: Kleo::Command(0x7ffcea1ad280) ~Command
org.kde.pim.kleopatra: Kleo::Command(0x7ffcea1ad280) ~Private
org.kde.pim.kleopatra: Startup timing: 130 ms: SelfCheck completed
org.kde.pim.kleopatra: startMonitoring
org.kde.pim.kleopatra: startMonitoring waiting for key cache ...
org.kde.pim.kleopatra: openOrRaiseMainWindow
org.kde.pim.kleopatra: Hook into the help menu to show the About dialog ourselves
org.kde.pim.kleopatra: open_or_raise showing window
org.kde.pim.kleopatra: you need to register view Kleo::TreeView(0x55efa4537440, name="m_view") before trying to set it as the current view!
org.kde.pim.kleopatra: Startup timing: 214 ms: new instance created
zxdg_exporter_v2@32: error 0: surface must be an xdg_toplevel
The Wayland connection experienced a fatal error: Protocol error
 ✘  ~ 
```
Comment 1 Wesley Bryie 2024-06-25 16:09:25 UTC
Same behavior on Arch Linux using GNOME Wayland.

```
org.kde.pim.kleopatra: Startup timing: 206 ms: Application created
org.kde.pim.kleopatra: Startup timing: 206 ms: Service created
org.kde.pim.kleopatra: Application created
org.kde.pim.kleopatra: Startup timing: 246 ms: GPGME Initialized
org.kde.pim.kleopatra: Startup timing: 280 ms: Starting version info check
org.kde.pim.kleopatra: Startup timing: 280 ms: Version info checked
org.kde.pim.kleopatra: Startup timing: 280 ms: Checking backend versions
org.kde.pim.kleopatra: Startup timing: 294 ms: backend versions checked
org.kde.pim.kleopatra: ReaderStatus::Private: Using new DeviceInfoWatcher
qt.core.qobject.connect: QObject::connect: No such signal QPlatformNativeInterface::systemTrayWindowChanged(QScreen*)
org.kde.pim.kleopatra: Startup timing: 303 ms: Application initialized
org.kde.pim.kleopatra: Startup timing: 304 ms: UiServer created
org.kde.pim.kleopatra: Startup timing: 304 ms: UiServer started
org.kde.pim.kleopatra: Checking gpg installation...
org.kde.pim.kleopatra: Checking gpgsm installation...
gpg.qgpgme: found no group for entry verbose of component "tpm2daemon"
gpg.qgpgme: found no group for entry quiet of component "tpm2daemon"
gpg.qgpgme: found no group for entry debug-level of component "tpm2daemon"
gpg.qgpgme: found no group for entry log-file of component "tpm2daemon"
org.kde.pim.kleopatra: Checking gpgconf installation...
org.kde.pim.kleopatra: Checking configuration of: 
org.kde.pim.kleopatra: Checking configuration of: gpg
org.kde.pim.kleopatra: Checking configuration of: gpg-agent
org.kde.pim.kleopatra: Checking configuration of: scdaemon
org.kde.pim.kleopatra: Checking configuration of: gpgsm
org.kde.pim.kleopatra: Checking configuration of: dirmngr
org.kde.pim.kleopatra: ArchiveDefinition[ "tar" ] QList("tar", "cf", "-", "--null", "-T-")
org.kde.pim.kleopatra: ArchiveDefinition[ "tar" ] find -print0 |  "/usr/bin/tar" QList("cf", "-", "--null", "-T-")
org.kde.pim.kleopatra: ArchiveDefinition[ "tar" ] QList("tar", "cfz", "-", "--null", "-T-")
org.kde.pim.kleopatra: ArchiveDefinition[ "tar" ] find -print0 |  "/usr/bin/tar" QList("cfz", "-", "--null", "-T-")
org.kde.pim.kleopatra: ArchiveDefinition[ "tar" ] QList("tar", "xf", "-")
org.kde.pim.kleopatra: ArchiveDefinition[ "tar" ] "/usr/bin/tar" QList("xf", "-") "%f" QList()
org.kde.pim.kleopatra: ArchiveDefinition[ "tar" ] QList("tar", "xfz", "-")
org.kde.pim.kleopatra: ArchiveDefinition[ "tar" ] "/usr/bin/tar" QList("xfz", "-") "%f" QList()
org.kde.pim.kleopatra: ArchiveDefinition[ "bzip2" ] QList("tar", "cfj", "-", "--null", "-T-")
org.kde.pim.kleopatra: ArchiveDefinition[ "bzip2" ] find -print0 |  "/usr/bin/tar" QList("cfj", "-", "--null", "-T-")
org.kde.pim.kleopatra: ArchiveDefinition[ "bzip2" ] QList("tar", "cfj", "-", "--null", "-T-")
org.kde.pim.kleopatra: ArchiveDefinition[ "bzip2" ] find -print0 |  "/usr/bin/tar" QList("cfj", "-", "--null", "-T-")
org.kde.pim.kleopatra: ArchiveDefinition[ "bzip2" ] QList("tar", "xfj", "-")
org.kde.pim.kleopatra: ArchiveDefinition[ "bzip2" ] "/usr/bin/tar" QList("xfj", "-") "%f" QList()
org.kde.pim.kleopatra: ArchiveDefinition[ "bzip2" ] QList("tar", "xfj", "-")
org.kde.pim.kleopatra: ArchiveDefinition[ "bzip2" ] "/usr/bin/tar" QList("xfj", "-") "%f" QList()
org.kde.pim.kleopatra: Kleo::Command(0x7fff1ef45f70) ~Command
org.kde.pim.kleopatra: Kleo::Command(0x7fff1ef45f70) ~Private
org.kde.pim.kleopatra: Startup timing: 385 ms: SelfCheck completed
org.kde.pim.kleopatra: startMonitoring
org.kde.pim.kleopatra: startMonitoring waiting for key cache ...
org.kde.pim.kleopatra: openOrRaiseMainWindow
org.kde.pim.kleopatra: Hook into the help menu to show the About dialog ourselves
org.kde.pim.kleopatra: open_or_raise showing window
org.kde.pim.kleopatra: you need to register view Kleo::TreeView(0x5f0ff3c18060, name="m_view") before trying to set it as the current view!
org.kde.pim.kleopatra: Startup timing: 584 ms: new instance created
The Wayland connection experienced a fatal error: Protocol error
```

When running Kleopatra with Gnome Xorg, it runs normally.
Comment 2 Andreas Sturmlechner 2024-08-19 20:19:45 UTC
Gino, can you confirm here as well that your crash happens in a Wayland session that is *not* Plasma, to give upstream a bit more to work with?

Can you furthermore try to reproduce this with Plasma Wayland or at least LXQt?
Comment 3 onigino 2024-08-20 16:45:48 UTC
(In reply to Andreas Sturmlechner from comment #2)
> Gino, can you confirm here as well that your crash happens in a Wayland
> session that is *not* Plasma, to give upstream a bit more to work with?
> 
> Can you furthermore try to reproduce this with Plasma Wayland or at least
> LXQt?

sorry for the delay, didn't get a notification...

yes confirmed, this experience is with wlroot 0.17.4 and swayWM 1.9 on Gentoo
currently confirmed on kleopatra-25.05.2 with frameworks 6.5.0

`kleopatra --config` works fine, the issue appears to only occur with the main window is displayed
also the issue occurs in flatpak as well. (can workaround issue by forcing XCB PLATFORM)

Yes I am not running plasma
Comment 4 Ingo Klöcker 2024-10-17 20:51:18 UTC
*** Bug 493927 has been marked as a duplicate of this bug. ***
Comment 5 zx3grjd9 2024-10-20 00:26:03 UTC
17.10.2024:
I also have this problem with the k-gpg application. fedora 40 workstation, on my pc OS the application does not work whether I install it as flatpak or rpm. The problem was again caused by wayland. More precisely the wayland incompatibility of kde applications.
I will start a new thread about k-gpg, but I will not give feedback in that thread. I know that wayland is the source of the problem, because I get the same errors when I run k-gpg from the terminal. I will use this thread as a reference.

Today I installed it on my PV with Fedora 40 workstation OS. First I installed Kleopatra as rpm.

sudo dnf install kleopatra 

Then I ran it from terminal:

macellan@fedora:~$ kleopatra
QDBusTrayIcon encountered a D-Bus error: QDBusError("org.freedesktop.DBus.Error.ServiceUnknown", "The name is not activatable")
gpg.qgpgme: found no group for entry verbose of component "tpm2daemon"
gpg.qgpgme: found no group for entry quiet of component "tpm2daemon"
gpg.qgpgme: found no group for entry debug-level of component "tpm2daemon"
gpg.qgpgme: found no group for entry log-file of component "tpm2daemon"
The Wayland connection experienced a fatal error: İletişim kurallarında hata

translate:
The Wayland connection experienced a fatal error: Error in protocols

macellan@fedora:~$ kleopatra -v
kleopatra 3.2.0.240802 (24.08.2)

macellan@fedora:~$ lsb_release -a
LSB Version:	
Distributor ID:	Fedora
Description:	Fedora release 40 (Forty)
Release:	40
Codename:	Forty
Comment 6 zx3grjd9 2024-10-20 00:33:07 UTC
macellan@fedora:~$ echo $XDG_SESSION_TYPE
wayland

macellan@fedora:~$ echo $DESKTOP_SESSION
gnome

macellan@fedora:~$ gnome-shell --version
GNOME Shell 46.5

macellan@fedora:~$ lsb_release -a
LSB Version:	:core-5.0-amd64:core-5.0-noarch
Distributor ID:	Fedora
Description:	Fedora release 40 (Forty)
Release:	40
Codename:	Forty
Comment 7 Bug Janitor Service 2024-10-31 10:59:21 UTC
A possibly relevant merge request was started @ https://invent.kde.org/pim/kleopatra/-/merge_requests/310
Comment 8 Tobias Fella 2024-10-31 15:17:59 UTC
*** Bug 494710 has been marked as a duplicate of this bug. ***
Comment 9 Carl Schwan 2024-10-31 18:13:37 UTC
Git commit 96eccd7c47069fa629a09fe5838b30bf11fceb45 by Carl Schwan.
Committed on 31/10/2024 at 18:13.
Pushed by carlschwan into branch 'release/24.08'.

Fix crash on non-kwin wayland compositors
GnuPG-Bug-ID: 6930


(cherry picked from commit 8517a8f0a9b50d6efb581c0b9f9ec5545cda9c32)

Co-authored-by: Tobias Fella <fella@posteo.de>

M  +6    -1    src/mainwindow.cpp

https://invent.kde.org/pim/kleopatra/-/commit/96eccd7c47069fa629a09fe5838b30bf11fceb45