Fix crash on non-kwin wayland compositors

BUG: 488090
GnuPG-Bug-ID: 6930